--- a/package.json
+++ b/package.json
@@ -1,86 +1,71 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
-    },
-    "devDependencies": {
-        "angular-bootstrap": "^0.12.2",
-        "angular-loading-bar": "^0.9.0",
-        "angular-perfect-scrollbar": "^0.0.5",
-        "angular-redactor": "^1.1.5",
-        "angular-sanitize": "^1.6.4",
-        "autoprefixer": "^6.7.7",
-        "axios": "^0.16.2",
-        "bower": "latest",
-        "bootstrap-sass": "^3.3.7",
-        "browser-sync": "latest",
-        "cross-env": "^5.0.1",
-        "event-stream": "latest",
-        "jquery": "^3.1.1",
-        "gulp": "latest",
-        "gulp-autoprefixer": "latest",
-        "gulp-concat": "latest",
-        "gulp-ignore": "latest",
-        "gulp-inject": "3.0.0",
-        "gulp-livereload": "~1.2.0",
-        "gulp-ngmin": "latest",
-        "gulp-plumber": "latest",
-        "gulp-rev": "latest",
-        "gulp-rimraf": "latest",
-        "gulp-sass": "latest",
-        "gulp-shell": "^0.4.2",
-        "gulp-uglify": "latest",
-        "gulp-util": "latest",
-        "gulp-watch": "~0.5.3",
-        "npm": "latest",
-        "terminal-notifier": "latest",
-        "wordwrap": "latest",
-        "laravel-mix": "^1.0",
-        "lodash": "^4.17.4",
-        "node-sass": "^4.5.2",
-        "sass-loader": "^6.0.3",
-        "style-loader": "^0.16.1",
-        "vue": "^2.1.10"
-    },
-    "dependencies": {
-        "admin-lte": "2.3.11",
-        "angucomplete-alt": "^3.0.0",
-        "angular": "^1.6.4",
-        "angular-animate": "^1.6.4",
-        "angular-file-upload": "^2.3.4",
-        "angular-input-masks": "^2.5.0",
-        "angular-loading-bar": "^0.9.0",
-        "angular-multiple-select": "^1.1.2",
-        "angular-selector": "^1.5.0",
-        "angular-swiper": "^0.4.0",
-        "angular-ui-notification": "^0.3.6",
-        "angular-ui-router": "^0.4.2",
-        "angularjs-slider": "^6.1.1",
-        "font-awesome": "^4.7.0",
-        "jquery": "^3.2.1",
-        "ng-dialog": "^1.1.0",
-        "ng-file-upload": "^12.2.13",
-        "satellizer": "^0.15.5",
-        "swiper": "^3.4.2",
-        "underscore": "^1.8.3",
-        "v-accordion": "^1.6.0",
-        "cookie": "^0.2.2",
-        "express": "^4.13.0",
-        "gulp-angular-templatecache": "^1.7.0",
-        "gulp-install": "^0.5.0",
-        "gulp-postcss": "^6.2.0",
-        "ioredis": "^1.5.7",
-        "jsonwebtoken": "^5.0.5",
-        "node-env-file": "^0.1.7",
-        "postcss-reporter": "^1.4.1",
-        "postcss-scss": "^0.3.0",
-        "socket.io": "^1.3.5",
-        "stylelint": "^7.3.1"
-    }
+  "private": true,
+  "scripts": {
+    "dev": "npm run development",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch-poll": "npm run watch -- --watch-poll",
+    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "prod": "npm run production",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+  },
+  "devDependencies": {
+    "angular-bootstrap": "^0.12.2",
+    "angular-loading-bar": "^0.9.0",
+    "angular-perfect-scrollbar": "^0.0.5",
+    "angular-redactor": "^1.1.5",
+    "angular-sanitize": "^1.6.4",
+    "autoprefixer": "^6.7.7",
+    "axios": "^0.16.2",
+    "bower": "latest",
+    "bootstrap-sass": "^3.3.7",
+    "browser-sync": "latest",
+    "cross-env": "^5.0.1",
+    "event-stream": "latest",
+    "jquery": "^3.1.1",
+    "npm": "latest",
+    "terminal-notifier": "latest",
+    "wordwrap": "latest",
+    "laravel-mix": "^1.0",
+    "lodash": "^4.17.4",
+    "node-sass": "^4.5.2",
+    "sass-loader": "^6.0.3",
+    "style-loader": "^0.16.1",
+    "vue": "^2.1.10"
+  },
+  "dependencies": {
+    "angucomplete-alt": "^3.0.0",
+    "angular": "^1.6.4",
+    "angular-animate": "^1.6.4",
+    "angular-file-upload": "^2.3.4",
+    "angular-input-masks": "^2.5.0",
+    "angular-loading-bar": "^0.9.0",
+    "angular-multiple-select": "^1.1.2",
+    "angular-selector": "^1.5.0",
+    "angular-swiper": "^0.4.0",
+    "angular-ui-notification": "^0.3.6",
+    "angular-ui-router": "^0.4.2",
+    "angularjs-slider": "^6.1.1",
+    "cookie": "^0.2.2",
+    "express": "^4.13.0",
+    "font-awesome": "^4.7.0",
+    "ioredis": "^1.5.7",
+    "jquery": "^3.2.1",
+    "jshint": "^2.9.5",
+    "jsonwebtoken": "^5.0.5",
+    "less": "^2.7.3",
+    "ng-dialog": "^1.1.0",
+    "ng-file-upload": "^12.2.13",
+    "node-env-file": "^0.1.7",
+    "postcss-reporter": "^1.4.1",
+    "postcss-scss": "^0.3.0",
+    "recess": "^1.1.9",
+    "satellizer": "^0.15.5",
+    "socket.io": "^1.3.5",
+    "stylelint": "^7.3.1",
+    "swiper": "^3.4.2",
+    "uglify-js": "^3.1.9",
+    "underscore": "^1.8.3",
+    "v-accordion": "^1.6.0"
+  }
 }
