--- a/package.json
+++ b/package.json
@@ -17,21 +17,22 @@
     "angular-sanitize": "^1.6.4",
     "autoprefixer": "^6.7.7",
     "axios": "^0.16.2",
-    "bower": "latest",
     "bootstrap-sass": "^3.3.7",
+    "bower": "latest",
     "browser-sync": "latest",
     "cross-env": "^5.0.1",
     "event-stream": "latest",
+    "grunt-injector": "^1.1.0",
     "jquery": "^3.1.1",
-    "npm": "latest",
-    "terminal-notifier": "latest",
-    "wordwrap": "latest",
     "laravel-mix": "^1.0",
     "lodash": "^4.17.4",
     "node-sass": "^4.5.2",
+    "npm": "latest",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.16.1",
-    "vue": "^2.1.10"
+    "terminal-notifier": "latest",
+    "vue": "^2.1.10",
+    "wordwrap": "latest"
   },
   "dependencies": {
     "angucomplete-alt": "^3.0.0",
@@ -49,6 +50,13 @@
     "cookie": "^0.2.2",
     "express": "^4.13.0",
     "font-awesome": "^4.7.0",
+    "grunt": "^0.4.5",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-nodeunit": "^0.4.1",
+    "grunt-contrib-qunit": "^2.0.0",
+    "grunt-contrib-uglify": "^0.5.1",
+    "grunt-contrib-watch": "^1.0.0",
     "ioredis": "^1.5.7",
     "jquery": "^3.2.1",
     "jshint": "^2.9.5",
